# zen_sphere

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20240218080305_initial-tables.sql
backend/src/: login.rs  main.rs  signup.rs
