[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls" , "postgres"] }


[profile.dev.package.sqlx-macros]
opt-level = 3
